# http_py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Procfile  README copy.md  README.md  example.py  examples.py  main.py  pyproject.toml  test_service_name.py  test_smoke.py
.github/: CODEOWNERS  copilot-instructions.md
.github/skills/validate-code/: SKILL.md
.github/workflows/: bump-version.yml  pr-workflow.yml
.opencode/plans/: 2026-04-28-0928-starlette-constraint.md
examples/: cache.py  cache_example.py  e2e_testing.py  e2e_testing_example.py  environment_example.py  examples.py  exception_handling.py  exception_handling_example.py  hmac_example.py  logging_example.py  postgres_example.py  rate_limiter.py  rate_limiter_example.py  request_logger.py  request_logger_example.py  v2_router_example.py
http_py/: __init__.py  context.py  dependencies.py  request.py  shortcuts.py  testing.py  types.py
http_py/aws/: __init__.py  secret_manager.py  types.py
http_py/cache/: 001_cache.sql  AGENTS.md  __init__.py  database_cache.py  in_memory_cache.py  migration.sql  models.py  protocol.py  redis_cache.py  types.py  utils.py
http_py/database/: exceptions.py  protocols.py
http_py/e2e_testing/: AGENTS.md  __init__.py  services.py
http_py/environment/: AGENTS.md  __init__.py  coercion.py  factory.py  manager.py  test_environment_manager_hook.py  validation.py
http_py/environment/tests/: test_environment_manager_hook.py
http_py/exception_handling/: AGENTS.md  __init__.py  services.py  types.py  utils.py
http_py/exceptions/: AGENTS.md  __init__.py  services.py  utils.py
http_py/hmac/: AGENTS.md  __init__.py  constants.py  dependencies.py  exceptions.py  services.py  types.py  utils.py
http_py/logging/: AGENTS.md  __init__.py  logging.py
http_py/postgres/: AGENTS.md  __init__.py  postgres.py
http_py/rate_limiter/: AGENTS.md  __init__.py  constants.py  middleware.py  migration.sql  services.py  servivces.py  types.py  utils.py
http_py/request_logger/: AGENTS.md  __init__.py  constants.py  migration.sql  services.py  types.py  utils.py
http_py/request_logger/tests/: test_utils.py  util_tests.py
http_py/requests/: __init__.py  services.py
http_py/routers/: __init__.py  v2.py
http_py/sqla/: AGENTS.md  adapters.py  context.py
http_py/sqla/tests/: test_adapters.py  test_context.py
http_py/utils/: AGENTS.md  __init__.py  protocols.py
http_py/utils/tests/: test_protocol_conformance.py
modules/: dependencies.py  functools.py  hmac.py  testing.py  types.py  validators.py
modules/aws/: secret_manager.py
modules/cache/: in_memory_cache.py  utils.py
modules/environment/: __init__.py  coercion.py  environment.py  factory.py  manager.py
modules/postgres/: postgres.py
modules/rate_limiter/: 002_rate_limiter.sql  middleware.py  services.py  types.py  utils.py
src/http_py/: __init__.py  constants.py  exceptions.py  middleware.py  models.py  utils.py
tests/: conftest.py  test_constants.py  test_exceptions.py  test_init.py  test_middleware.py  test_models.py  test_utils.py
