[tool.poetry]
name = "http_py"
version = "0.1.0"
description = ""
authors = ["Angel Lacret <alacret@gmail.com>"]
readme = "README.md"
packages = [
    { include = "http_py" }
]

[tool.poetry.dependencies]
python = "3.13.*"
python-dotenv = "1.2.1"
timezonefinder = "8.1.0"
psycopg = { version = "3.3.2", extras = ["binary", "pool"] }
psycopg-pool = "3.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
pre-commit = "^4.5.1"
mypy = "1.19.1"

[tool.setuptools.packages.find]
where = ["http_py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
ignore = ["E203", "S110"] # "E704"
select = [
    "E", "F", "W",  # flake8
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # pylint"
    "B",    # flake8-bugbear: https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "S",    # flake8-bandit:  https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "C90"   # flake8-mccabe: https://docs.astral.sh/ruff/rules/#mccabe-c90
]


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
from-first = false
length-sort = true
length-sort-straight = true
force-sort-within-sections = false
lines-between-types = 0
order-by-type = false
force-single-line = false
known-first-party = [
    "http_py",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]


[tool.ruff.lint.mccabe]
max-complexity = 13


[tool.mypy]
mypy_path = "."
python_version = "3.13"
strict = true
implicit_reexport = true  # Insightt has convention of not using __all__
plugins = [
  "pydantic.mypy"
]
exclude = [
    'shared/h3.py'
]
